--- a/app/design/adminhtml/default/default/template/keycash/core/sales/order/view/tab/verification.phtml
+++ b/app/design/adminhtml/default/default/template/keycash/core/sales/order/view/tab/verification.phtml
@@ -1,3 +1,20 @@
+<?php
+/**
+ * KeyCash
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the Academic Free License (AFL 3.0)
+ * that is bundled with this package in the file LICENSE_AFL.txt.
+ * It is also available through the world-wide-web at this URL:
+ * http://opensource.org/licenses/afl-3.0.php
+ *
+ * @category    Keycash
+ * @package     Keycash_Core
+ * @copyright   Copyright (c) 2017 KeyCash. (https://keycash.co)
+ * @license     http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+?>
 <?php $helper = Mage::helper('keycash_core') ?>
 <?php $verificationData = $this->getVerificationData() ?>
 <div>
